--- a/ca-a2a-config.env
+++ b/ca-a2a-config.env
@@ -8,6 +8,11 @@ export PRIVATE_SUBNET_1="subnet-07484aca0e473e3d0"
 export PRIVATE_SUBNET_2="subnet-0aef6b4fcce7748a9"
 export ALB_SG="sg-05db73131090f365a"
 export ECS_SG="sg-047a8f39f9cdcaf4c"
+export ORCHESTRATOR_SG="sg-047a8f39f9cdcaf4c"
+export EXTRACTOR_SG="sg-047a8f39f9cdcaf4c"
+export VALIDATOR_SG="sg-047a8f39f9cdcaf4c"
+export ARCHIVIST_SG="sg-047a8f39f9cdcaf4c"
+export RDS_SG="sg-0dfffbf7f98f77a4c"
 export S3_BUCKET="ca-a2a-documents-555043101106"
 export RDS_ENDPOINT="ca-a2a-postgres.czkdu9wcburt.eu-west-3.rds.amazonaws.com"
 export DB_PASSWORD="benabderrazak"
