--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,11 @@ jsonschema>=4.20.0  # Keep for backward compatibility with Agent Cards
 # Environment
 python-dotenv>=1.0.0
 
+# Security
+PyJWT>=2.10.1
+cryptography>=43.0.0
+PyYAML>=6.0.2
+
 # Testing
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
