--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,9 @@ PyJWT>=2.10.1
 cryptography>=43.0.0
 PyYAML>=6.0.2
 
+# MCP (Model Context Protocol)
+mcp>=0.9.0  # Official MCP SDK
+
 # Testing
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
