Migrate agents to use centralized MCP server
Major architectural change: Move from library-based MCP to server-based MCP

**New Files:**
- mcp_server_http.py: HTTP API server for distributed MCP access
- mcp_client_http.py: HTTP client for agents
- mcp_context_auto.py: Auto-selects stdio/HTTP based on environment
- Dockerfile.mcp: Docker image for MCP server
- Deploy-MCPServer.ps1: ECS deployment script for MCP server
- Update-AgentsWithMCP.ps1: Script to update agent configs
- MCP_MIGRATION_GUIDE.md: Complete migration documentation

**Modified Agents:**
- orchestrator_agent.py: Use get_mcp_context()
- extractor_agent.py: Use get_mcp_context()
- archivist_agent.py: Use get_mcp_context()

**Updated MCP:**
- mcp_client.py: Added initialize_schema() method
- mcp_server.py: Added postgres_init_schema tool

**Infrastructure:**
- docker-compose.yml: Added mcp-server service on port 8000
- Dockerfile.mcp: Optimized for HTTP server deployment

**Benefits:**
- Centralized resource access (S3, PostgreSQL)
- Single point for credentials management
- Better observability and monitoring
- MCP protocol standard compliance
- Automatic stdio/HTTP selection per environment

**Architecture:**
Local/Docker: Agents use stdio MCP client
AWS ECS: Agents use HTTP MCP client -> MCP Server (port 8000) -> Resources

Ready for AWS ECS deployment with Deploy-MCPServer.ps1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,33 @@ services:
       timeout: 5s
       retries: 5
 
+  # MCP Server (HTTP)
+  mcp-server:
+    build:
+      context: .
+      dockerfile: Dockerfile.mcp
+    container_name: mcp_server
+    command: python mcp_server_http.py
+    ports:
+      - "8000:8000"
+    environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      POSTGRES_DB: documents_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    depends_on:
+      postgres:
+        condition: service_healthy
+    env_file:
+      - .env
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   # Orchestrator Agent
   orchestrator:
     build: .
@@ -36,8 +63,11 @@ services:
       EXTRACTOR_HOST: extractor
       VALIDATOR_HOST: validator
       ARCHIVIST_HOST: archivist
+      MCP_SERVER_URL: http://mcp-server:8000
     depends_on:
       postgres:
+        condition: service_healthy
+      mcp-server:
         condition: service_healthy
     env_file:
       - .env
@@ -57,8 +87,11 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       EXTRACTOR_HOST: 0.0.0.0
+      MCP_SERVER_URL: http://mcp-server:8000
     depends_on:
       postgres:
+        condition: service_healthy
+      mcp-server:
         condition: service_healthy
     env_file:
       - .env
@@ -89,8 +122,11 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       ARCHIVIST_HOST: 0.0.0.0
+      MCP_SERVER_URL: http://mcp-server:8000
     depends_on:
       postgres:
+        condition: service_healthy
+      mcp-server:
         condition: service_healthy
     restart: unless-stopped
 
