Fix MCP SDK import error for AWS deployment
- Make MCP stdio imports conditional and defensive in mcp_client.py
- Initialize variables to None before import attempt
- Add API compatibility check before importing SDK classes
- Update all Dockerfiles to Python 3.11 (required for mcp>=0.9.0)
- Add Rebuild-And-Redeploy-Orchestrator.ps1 script
- Document fix in TROUBLESHOOTING.md

Root cause: mcp_client.py imported MCP stdio SDK at module level,
but SDK API changed. In AWS we only use HTTP mode (mcp_client_http.py),
but the import still executed and failed.

Solution: Graceful fallback when SDK unavailable or API incompatible.

--- a/Dockerfile.validator
+++ b/Dockerfile.validator
@@ -1,11 +1,32 @@
-FROM python:3.9-slim
+# Use Python 3.11 slim image (required for mcp>=0.9.0)
+FROM python:3.11-slim
+
 WORKDIR /app
-RUN apt-get update && apt-get install -y gcc postgresql-client libpq-dev curl && rm -rf /var/lib/apt/lists/*
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    postgresql-client \
+    libpq-dev \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements first for better caching
 COPY requirements.txt .
+
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy application code
 COPY *.py ./
+
+# Create non-root user
 RUN useradd -m -u 1000 agent && chown -R agent:agent /app
 USER agent
+
+# Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8003/health || exit 1
+
+# Run validator
 CMD ["python", "validator_agent.py"]
