--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Large files and build artifacts
+*.zip
+*.tar
+*.tar.gz
+*.log
+awscliv2.zip
+extractor-fixed.tar
+deploy-complete-log.txt
+docs_archive_*/
+
 # Python
 __pycache__/
 *.py[cod]
@@ -22,8 +32,8 @@ wheels/
 
 # Virtual Environment
 venv/
-env/
 ENV/
+env/
 
 # IDE
 .vscode/
@@ -32,28 +42,14 @@ ENV/
 *.swo
 *~
 
-# Environment variables
-.env
-
-# Logs
-*.log
-agents.log
-
 # OS
 .DS_Store
 Thumbs.db
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
+# AWS
+.aws/
+*.pem
 
-# Database
-*.db
-*.sqlite3
-
-# Temporary files
-*.tmp
-temp/
-tmp/
-
+# Logs
+*.log
+logs/
