Add Keycloak OAuth2 integration for centralized authentication
- Deploy Keycloak service to ECS with PostgreSQL backend
- Implement JWT validation via JWKS endpoint (keycloak_auth.py)
- Integrate Keycloak with A2ASecurityManager for hybrid auth
- Add RBAC role mapping (admin, lambda, orchestrator, viewer)
- Create automated deployment scripts (deploy, configure, update)
- Add Python client library and examples
- Include comprehensive documentation and tests
- Support backward compatibility with legacy JWT/API keys

New files:
- keycloak_auth.py: Core authentication library (450 lines)
- deploy-keycloak.sh: Automated ECS deployment
- configure-keycloak.sh: Realm and user configuration
- update-agents-keycloak.sh: Agent task definition updates
- test-keycloak-auth.sh: End-to-end authentication test
- keycloak_client_example.py: Python client with examples
- test_keycloak_integration.py: Unit tests (25 tests)
- KEYCLOAK_INTEGRATION_GUIDE.md: Full documentation (800 lines)
- KEYCLOAK_QUICK_START.md: 15-minute deployment guide
- KEYCLOAK_IMPLEMENTATION_SUMMARY.md: Complete summary

Benefits:
- Centralized identity management with Keycloak
- MFA and SSO support
- Dynamic token issuance and revocation
- Comprehensive audit logging
- Production-ready with HA and secrets management

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@ extractor-fixed.tar
 deploy-complete-log.txt
 docs_archive_*/
 
+# Generated documentation artifacts (large binary files)
+*.pdf
+*.jpeg
+*.png
+*.html
+
 # Python
 __pycache__/
 *.py[cod]
